    - Migrate profile independent keys separately from the profile 
      dependent keys (LP: #1046190)
    - Fix CMakeLists.txt to bring an xslt file back to compiz-dev
    - Ensure window decorations always get rendered after the window, not
      before. This is how it was in compiz 0.9.7, and is required in order 
      to resolve unity panel shadow (LP: #1050704)
  * Drop dependency on libgconf2-dev, add gconf2 dependency to the 
    transitional package for migrations
  * Add -DUSE_GCONF=OFF to debian/rules
  * debian/libdecoration0.symbols
    - Add decor_shadow_options_cmp

 -- Timo Jyrinki <timo-jyrinki@ubuntu.com>  Mon, 10 Sep 2012 15:27:32 +0300

compiz (1:0.9.8.0-0ubuntu1) quantal-proposed; urgency=low

  * debian/control, debian/rules: 
    - enable gles on armel and armhf
    - use dh-translations rather than custom code

  [ Sam Spilsbury ]
  * Enable OpenGL ES building 
    - Refresh debian/patches/workaround_broken_drivers.patch
    - Remove non-ported plugins from compiz-plugins
    - Add FindOpenGLES2.cmake to compiz-dev

  [ Timo Jyrinki ]
  * New upstream release.
    - Code to make compiz work on GLES. This includes several changes 
      to the compiz API. (LP: #201342) (LP: #901097) (LP: #1004251)
      (LP: #1037710)
    - Draft first 0.9.8.0 NEWS and bump VERSION
  * debian/patches/compiz-package-gles2.patch:
    - Remove, obsoleted by the upstream GLES work 
  * Disable plugins that don't work on pure GLES on armhf/armel:
    - bench, firepaint, mblur, showmouse, splash, showrepaint, td, widget

 -- Sebastien Bacher <seb128@ubuntu.com>  Fri, 31 Aug 2012 22:59:50 +0200

compiz (1:0.9.8+bzr3319-0ubuntu3) quantal; urgency=low

  * debian/control.in:
    - Recommends python-gconf for the migration script (lp: #1041498)
  * postinst/convert-files/compiz-profile-active-Default.convert, 
    postinst/convert-files/compiz-profile-Default.convert:
    - updated to fix some key names typos in the list (lp: #1041631)
